# aoa

./: LICENSE  README.md
aoa-dgt/: AOADGTConfig.h.in  CMakeLists.txt
aoa-dgt/cmake/: FindAOADGT.cmake  doxygen.cmake
aoa-dgt/demos/: CMakeLists.txt
aoa-dgt/demos/src/: CMakeLists.txt  simple_polyop.cpp
aoa-dgt/include/AOADGT/: AOADGTConfig.h  SPOGCKKSConfig.h  ckks.h  ckkscontext.h  defines.h  keys.h  settings.h
aoa-dgt/include/AOADGT/arithmetic/: ciphertext.h  context.h  coprimes.h  polynomial.h
aoa-dgt/include/AOADGT/cuda/: cudaengine.h  dgt.h  sampler.h
aoa-dgt/include/AOADGT/tool/: encoder.h  log.h  version.h
aoa-dgt/src/: ckks.cpp  ckkscontext.cpp  keys.cpp
aoa-dgt/src/arithmetic/: README.md  ciphertext.cpp  context.cpp  coprimes.cu  generate_coprimes.py  polynomial.cu  primitiveroots.json
aoa-dgt/src/arithmetic/coprimes/: qis_33.json  qis_34.json  qis_40.json  qis_44.json  qis_50.json  qis_55.json  qis_56.json  qis_58.json  qis_59.json  qis_60.json
aoa-dgt/src/cuda/: cudaengine.cu  dgt.cu  sampler.cu
aoa-dgt/src/tool/: encoder.cu  log.cu  version.cpp
aoa-dgt/tests/: CMakeLists.txt
aoa-dgt/tests/benchmarks/: CMakeLists.txt  benchmark.cu  benchmark_residues.cpp
aoa-dgt/tests/unit_tests/: CMakeLists.txt  test_arithmetic.cu  test_ckks.cu
aoa-ntt/: CMakeLists.txt  LICENSE  newckksConfig.h.in
aoa-ntt/cmake/: FindRapidjson.cmake  Findnewckks.cmake
aoa-ntt/demos/: CMakeLists.txt
aoa-ntt/demos/src/: CMakeLists.txt  simple_mul.cpp
aoa-ntt/include/newckks/: coprimes.h  defines.h  newckksConfig.h
aoa-ntt/include/newckks/arithmetic/: poly_t.h
aoa-ntt/include/newckks/ckks/: cipher_t.h  ckks.h  ckkscontext.h  ckkskeys.h  encoder.h
aoa-ntt/include/newckks/cuda/: manager.h  sampler.h
aoa-ntt/include/newckks/cuda/htrans/: common.h  dgt.h  ntt.h
aoa-ntt/include/newckks/tool/: context.h  version.h
aoa-ntt/src/arithmetic/: poly_t.cpp
aoa-ntt/src/ckks/: cipher_t.cpp  ckks.cpp  ckkscontext.cpp  ckkskeys.cpp  encoder.cu
aoa-ntt/src/cuda/: manager.cu  sampler.cu
aoa-ntt/src/cuda/htrans/: common.cu  coprimes.cu.bkp  ntt.cu
aoa-ntt/src/cuda/htrans/aux/: coprimes.cu  generate_coprimes.py  prime.py  qis_30.json  qis_32.json  qis_36.json  qis_37.json  qis_38.json  qis_43.json  qis_45.json  qis_48.json  qis_52.json  qis_57.json  qis_61.json  qis_62.json  qis_63.json
aoa-ntt/src/tool/: context.cpp  version.cpp
aoa-ntt/tests/: CMakeLists.txt  benchmark.cpp  benchmark_residues.cpp  tests.cpp
